// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// Zadanie I2

message ArithmeticOpArguments {
  int32 arg1 = 1;
  int32 arg2 = 2;
}

message MultipleOpArguments {
  repeated ArithmeticOpArguments args = 1;
}

message ArithmeticOpResult {
  int32 res = 1;
}

message MultipleOpResult {
  repeated int32 res = 1;
}

service Calculator {
  rpc add (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc subtract (ArithmeticOpArguments) returns (ArithmeticOpResult) {}
  rpc multipleAdd (MultipleOpArguments) returns (MultipleOpResult) {}
}